[gd_scene load_steps=9 format=3 uid="uid://bpa1afev6trcv"]

[ext_resource type="Script" uid="uid://cjj3341it3cet" path="res://Враги/enemy_health.gd" id="1_o2xuj"]
[ext_resource type="AudioStream" uid="uid://3dntts6tqo2v" path="res://Звуки/Попадание/464623__d001447733__enemy_hit.wav" id="2_r6qqy"]
[ext_resource type="AudioStream" uid="uid://bt184vjop7wtq" path="res://Звуки/Смерть врага/547041__cogfirestudios__hit-swing-sword-small-3.wav" id="3_ndvt1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iuksk"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_o2xuj"]
material = SubResource("StandardMaterial3D_iuksk")

[sub_resource type="BoxShape3D" id="BoxShape3D_mhe00"]

[sub_resource type="BoxShape3D" id="BoxShape3D_o2xuj"]
size = Vector3(11.791161, 1, 11.896233)

[sub_resource type="BoxShape3D" id="BoxShape3D_r6qqy"]
size = Vector3(2.2509766, 1, 2.4404602)

[node name="Enemy" type="CharacterBody3D" groups=["enemies"]]
script = ExtResource("1_o2xuj")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_o2xuj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_mhe00")

[node name="HealthLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7994279, 0)
billboard = 1
text = "100"
font_size = 83

[node name="DetectionZone" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.31402206, 0, -0.4061699)
shape = SubResource("BoxShape3D_o2xuj")

[node name="ChaseTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AttackZone" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.16845703, 0, 0.07258606)
shape = SubResource("BoxShape3D_r6qqy")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="HitSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_r6qqy")

[node name="DeathSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_ndvt1")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[connection signal="body_entered" from="DetectionZone" to="." method="_on_detection_zone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_detection_zone_body_exited"]
[connection signal="timeout" from="ChaseTimer" to="." method="_on_chase_timer_timeout"]
[connection signal="body_entered" from="AttackZone" to="." method="_on_attack_zone_body_entered"]
[connection signal="body_exited" from="AttackZone" to="." method="_on_attack_zone_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
